home-assistant/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: home-assistant-headers
  namespace: home-assistant
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "http"
      X-Forwarded-Host: "192.168.1.128"
    stsSeconds: 0
    stsIncludeSubdomains: false
    stsPreload: false
    frameDeny: false
